hover then un-hover makes state change https://bugs.webkit.org/show_bug.cgi?id=56401

Patch by Mihnea Ovidenie <mihnea@adobe.com> on 2011-08-02
Reviewed by David Hyatt.

Source/WebCore:

When a 'before' pseudo-element is re-added, we should check whether the insertion point is an anonymous
block with inline children. If it is, then we should change the insertion point to the first child of the
anonymous block, otherwise the 'before' pseudo-element ends up in a different block. We choose the insertion
point to be the first child only if the anonymous block has children, otherwise the before element ends up
in a wrong block.

Tests: fast/dynamic/hover-before-position-after-style-change.html
       fast/dynamic/hover-before-position-after-style-change2.html

* rendering/RenderObjectChildList.cpp:
(WebCore::RenderObjectChildList::updateBeforeAfterContent):

LayoutTests:

* fast/dynamic/hover-before-position-after-style-change-expected.txt: Added.
* fast/dynamic/hover-before-position-after-style-change.html: Added.
* fast/dynamic/hover-before-position-after-style-change2-expected.txt: Added.
* fast/dynamic/hover-before-position-after-style-change2.html: Added.

Canonical link: https://commits.webkit.org/81343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92200 268f45cc-cd09-0410-ab3c-d52691b4dbfc